tests/ui/consts/const-eval/issue-50814.stderr
error[E0080]: evaluation of `<Sum<U8, U8> as Unsigned>::MAX` failed
  --> $DIR/issue-50814.rs:15:21
   |
LL |     const MAX: u8 = A::MAX + B::MAX;
   |                     ^^^^^^^^^^^^^^^ attempt to compute `u8::MAX + u8::MAX`, which would overflow

note: erroneous constant encountered
  --> $DIR/issue-50814.rs:20:6
   |
LL |     &Sum::<U8, U8>::MAX
   |      ^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn foo::<i32>`
  --> $DIR/issue-50814.rs:25:5
   |
LL |     foo(0);
   |     ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
